kubernetes/lb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nedkp-lb
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8000 # port exposed by service
    targetPort: 8080 # port exposed in pods
  selector:
    app: nedkp
