kubernetes/network-policy-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-by-default
spec:
  podSelector: {}
  policyTypes: # would also work without the following lines
  - Ingress # incoming
  - Egrass # outgoing
